Add two users cards

--- a/index.html
+++ b/index.html
@@ -35,7 +35,54 @@
       </p>
       <h2 class="user-contact">Contact</h2>
       <div class="icons-media-container">
-        /*
+        <i class="icons-media fa-brands fa-facebook-f"></i>
+        <i class="icons-media fa-brands fa-whatsapp"></i>
+        <i class="icons-media fa-brands fa-instagram"></i>
+        <i class="icons-media fa-brands fa-twitter"></i>
+      </div>
+      <div class="btn-container">
+        <a class="button button-color-braun" href="#">Contact Me</a>
+        <a class="button button-color-coral" href="#">Hire Me</a>
+      </div>
+    </article>
+    <article class="user-card">
+      <img
+        class="user-foto"
+        src="./assets/images/user_foto.jfif"
+        alt="AKINWUMI MICHAEL"
+      />
+      <h2 class="user-name">AKINWUMI MICHAEL</h2>
+      <p class="user-job">Product Design Track</p>
+      <p class="about-user">
+        I choose product design because i love seeing beautiful interfaces and
+        to be able to solve user’s problems.
+      </p>
+      <h2 class="user-contact">Contact</h2>
+      <div class="icons-media-container">
+        <i class="icons-media fa-brands fa-facebook-f"></i>
+        <i class="icons-media fa-brands fa-whatsapp"></i>
+        <i class="icons-media fa-brands fa-instagram"></i>
+        <i class="icons-media fa-brands fa-twitter"></i>
+      </div>
+      <div class="btn-container">
+        <a class="button button-color-braun" href="#">Contact Me</a>
+        <a class="button button-color-coral" href="#">Hire Me</a>
+      </div>
+    </article>
+    <article class="user-card">
+      <img
+        class="user-foto"
+        src="./assets/images/user_foto.jfif"
+        alt="AKINWUMI MICHAEL"
+      />
+      <h2 class="user-name">AKINWUMI MICHAEL</h2>
+      <p class="user-job">Product Design Track</p>
+      <p class="about-user">
+        I choose product design because i love seeing beautiful interfaces and
+        to be able to solve user’s problems.
+      </p>
+      <h2 class="user-contact">Contact</h2>
+      <div class="icons-media-container">
         <i class="icons-media fa-brands fa-facebook-f"></i>
         <i class="icons-media fa-brands fa-whatsapp"></i>
         <i class="icons-media fa-brands fa-instagram"></i>
