Fiixed card sizes

--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
   </head>
   <body>
     <article class="user-card">
-      <img
-        class="user-foto"
-        src="./assets/images/user_foto.jfif"
-        alt="AKINWUMI MICHAEL"
-      />
-      <h2 class="user-name">AKINWUMI MICHAEL</h2>
-      <p class="user-job">Product Design Track</p>
-      <p class="about-user">
-        I choose product design because i love seeing beautiful interfaces and
-        to be able to solve user’s problems.
-      </p>
+      <div class="p-container">
+        <img
+          class="user-foto"
+          src="./assets/images/user_foto.jfif"
+          alt="AKINWUMI MICHAEL"
+        />
+        <h2 class="user-name">AKINWUMI MICHAEL</h2>
+        <p class="user-job">Product Design Track</p>
+        <p class="about-user">
+          I choose product design because i love seeing beautiful interfaces and
+          to be able to solve user’s problems.
+        </p>
+      </div>
       <h2 class="user-contact">Contact</h2>
       <div class="icons-media-container">
         <i class="icons-media fa-brands fa-facebook-f"></i>
@@ -46,17 +48,24 @@
       </div>
     </article>
     <article class="user-card">
-      <img
-        class="user-foto"
-        src="./assets/images/user_foto.jfif"
-        alt="AKINWUMI MICHAEL"
-      />
-      <h2 class="user-name">AKINWUMI MICHAEL</h2>
-      <p class="user-job">Product Design Track</p>
-      <p class="about-user">
-        I choose product design because i love seeing beautiful interfaces and
-        to be able to solve user’s problems.
-      </p>
+      <div class="p-container">
+        <img
+          class="user-foto"
+          src="./assets/images/user_foto.jfif"
+          alt="AKINWUMI MICHAEL"
+        />
+        <h2 class="user-name">AKINWUMI MICHAEL</h2>
+        <p class="user-job">Product Design Track</p>
+
+        <p class="about-user">
+          I choose product design because i love seeing beautiful interfaces and
+          to be able to solve user’s problems.
+        </p>
+        <p class="about-user">
+          I choose product design because i love seeing beautiful interfaces and
+          to be able to solve user’s problems.
+        </p>
+      </div>
       <h2 class="user-contact">Contact</h2>
       <div class="icons-media-container">
         <i class="icons-media fa-brands fa-facebook-f"></i>
@@ -70,17 +79,29 @@
       </div>
     </article>
     <article class="user-card">
-      <img
-        class="user-foto"
-        src="./assets/images/user_foto.jfif"
-        alt="AKINWUMI MICHAEL"
-      />
-      <h2 class="user-name">AKINWUMI MICHAEL</h2>
-      <p class="user-job">Product Design Track</p>
-      <p class="about-user">
-        I choose product design because i love seeing beautiful interfaces and
-        to be able to solve user’s problems.
-      </p>
+      <div class="p-container">
+        <img
+          class="user-foto"
+          src="./assets/images/user_foto.jfif"
+          alt="AKINWUMI MICHAEL"
+        />
+        <h2 class="user-name">AKINWUMI MICHAEL</h2>
+        <p class="user-job">Product Design Track</p>
+
+        <p class="about-user">
+          I choose product design because i love seeing beautiful interfaces and
+          to be able to solve user’s problems.
+        </p>
+        <p class="about-user">
+          I choose product design because i love seeing beautiful interfaces and
+          to be able to solve user’s problems.
+        </p>
+        <p class="about-user">
+          I choose product design because i love seeing beautiful interfaces and
+          to be able to solve user’s problems.
+        </p>
+      </div>
+
       <h2 class="user-contact">Contact</h2>
       <div class="icons-media-container">
         <i class="icons-media fa-brands fa-facebook-f"></i>
